infrastructure/kyverno-policies/verify-flux-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-flux-images
  namespace: kube-system
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-cosign-signature
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
        - image: "ghcr.io/fluxcd/helm-controller:*"
          repository: "ghcr.io/fluxcd/helm-controller"
          roots: |
            -----BEGIN CERTIFICATE-----
            MIIB9zCCAXygAwIBAgIUALZNAPFdxHPwjeDloDwyYChAO/4wCgYIKoZIzj0EAwMw
[...]
            TNMea7Ix/stJ5TfcLLeABLE4BNJOsQ4vnBHJ
            -----END CERTIFICATE-----

        - image: "ghcr.io/fluxcd/kustomize-controller:*"
          repository: "ghcr.io/fluxcd/kustomize-controller"
          roots: |
            -----BEGIN CERTIFICATE-----
            MIIB9zCCAXygAwIBAgIUALZNAPFdxHPwjeDloDwyYChAO/4wCgYIKoZIzj0EAwMw
[...]
            TNMea7Ix/stJ5TfcLLeABLE4BNJOsQ4vnBHJ
            -----END CERTIFICATE-----

        - image: "ghcr.io/fluxcd/notification-controller:*"
          repository: "ghcr.io/fluxcd/notification-controller"
          roots: |
            -----BEGIN CERTIFICATE-----
            MIIB9zCCAXygAwIBAgIUALZNAPFdxHPwjeDloDwyYChAO/4wCgYIKoZIzj0EAwMw
[...]
            TNMea7Ix/stJ5TfcLLeABLE4BNJOsQ4vnBHJ
            -----END CERTIFICATE-----

        - image: "ghcr.io/fluxcd/source-controller:*"
          repository: "ghcr.io/fluxcd/source-controller"
          roots: |
            -----BEGIN CERTIFICATE-----
            MIIB9zCCAXygAwIBAgIUALZNAPFdxHPwjeDloDwyYChAO/4wCgYIKoZIzj0EAwMw
[...]
            TNMea7Ix/stJ5TfcLLeABLE4BNJOsQ4vnBHJ
            -----END CERTIFICATE-----

        - image: "ghcr.io/fluxcd/image-automation-controller:*"
          repository: "ghcr.io/fluxcd/image-automation-controller"
          roots: |
            -----BEGIN CERTIFICATE-----
            MIIB9zCCAXygAwIBAgIUALZNAPFdxHPwjeDloDwyYChAO/4wCgYIKoZIzj0EAwMw
[...]
            TNMea7Ix/stJ5TfcLLeABLE4BNJOsQ4vnBHJ
            -----END CERTIFICATE-----

        - image: "ghcr.io/fluxcd/image-reflector-controller:*"
          repository: "ghcr.io/fluxcd/image-reflector-controller"
          roots: |
            -----BEGIN CERTIFICATE-----
            MIIB9zCCAXygAwIBAgIUALZNAPFdxHPwjeDloDwyYChAO/4wCgYIKoZIzj0EAwMw
[...]
            TNMea7Ix/stJ5TfcLLeABLE4BNJOsQ4vnBHJ
            -----END CERTIFICATE-----
